# sqlx-playground

./: Cargo.toml  Makefile.toml  build.rs  docker-compose.yml
migrations/: 20200716192800_main.sql  postgres.dbm
modules/shared/: Cargo.toml
modules/shared/src/: lib.rs
modules/shared/src/components/: customer.rs  email.rs  mod.rs
modules/shared/src/entities/: customer.rs  email.rs  mod.rs
modules/shared/src/helpers/: database.rs
modules/shared/src/models/: customer.rs  mod.rs
modules/shared/src/scalars/: graphql.rs  mod.rs  result.rs  time.rs  uuid.rs
modules/user/: Cargo.toml  sqlx-data.json
modules/user/src/: lib.rs
modules/user/src/services/entry/: controller.rs  controllers.rs  database.rs  gateway.rs  mod.rs  traits.rs  usecase.rs
schema/: postgres.sql
src/: main.rs  models.rs
src/services/: context.rs  handlers.rs  mod.rs
src/services/graphql/: mod.rs
src/services/graphql/user/: mod.rs  mutations.rs  queries.rs
src/shared/: mod.rs
src/shared/components/: email.rs
src/shared/entities/: email.rs  mod.rs  user.rs
src/shared/models/: mod.rs
src/shared/scalars/: mod.rs
src/user/services/entry/: controller.rs  usecase.rs
