[package]
name = "sqlx-playground"
version = "0.1.0"
authors = ["olvyko <olvyko@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "modules/shared",
    "modules/user",
]

[dependencies]
shared = { path = "modules/shared" }
user = { path = "modules/user" }
tokio = { version = "0.2.21", features = ["full"] }
dotenv = "0.15.0"

[build-dependencies]
tokio = { version = "0.2.21", features = ["full"] }
dotenv = "0.15.0"

[build-dependencies.sqlx]
git = "https://github.com/launchbadge/sqlx"
rev = "41261862d3537bd386149b4bf40d3a9517f73205"
features = [ "macros", "runtime-tokio", "postgres", "migrate", "json", "chrono", "uuid" ]
default-features = false
