[package]
name = "sqlx-playground"
version = "0.1.0"
authors = ["olvyko <olvyko@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "modules/shared",
    "modules/user",
]

[dependencies]
shared = { path = "modules/shared" }
user = { path = "modules/user" }
tokio = { version = "0.2.21", features = ["full"] }
futures = "0.3.0"
dotenv = "0.15.0"
actix-web = { version = "2.0", features = ["rustls"] }
actix-cors = "0.2"
actix-rt = "1.0.0"
actix = "0.9.0"
pretty_env_logger = "0.3"
colored = "1.9.2"
log = "0.4.8"
actix-web-actors = "2.0.0"
serde_json = "1.0"

[dependencies.juniper]
git = "https://github.com/graphql-rust/juniper.git"
rev = "4647a32b33f99b16c6bcdd3e5b7df329ed34cb71" 
default-features = false
features = ["url", "uuid"]

[build-dependencies]
tokio = { version = "0.2.21", features = ["full"] }
dotenv = "0.15.0"

[build-dependencies.sqlx]
version = "0.4.0-beta.1"
features = [ "macros", "runtime-actix", "postgres", "migrate", "json", "chrono", "uuid" ]
default-features = false
