[package]
name = "shared"
version = "0.1.0"
authors = ["olvyko <olvyko@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.13", features = ["serde"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
tokio = { version = "0.2.21", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.27"

[dependencies.sqlx]
git = "https://github.com/launchbadge/sqlx"
rev = "41261862d3537bd386149b4bf40d3a9517f73205"
features = [ "offline", "macros", "runtime-tokio", "postgres", "migrate", "json", "chrono", "uuid" ]
default-features = false
