[package]
name = "shared"
version = "0.1.0"
authors = ["olvyko <olvyko@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.13", features = ["serde"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
tokio = { version = "0.2.21", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.27"
derive_more = "0.99.2"

[dependencies.juniper]
git = "https://github.com/graphql-rust/juniper.git"
rev = "4647a32b33f99b16c6bcdd3e5b7df329ed34cb71" 
default-features = false
features = ["url", "uuid"]

[dependencies.sqlx]
version = "0.4.0-beta.1"
features = [ "offline", "macros", "runtime-actix", "postgres", "migrate", "json", "chrono", "uuid" ]
default-features = false
